rds.tf
resource "aws_db_instance" "main" {
  identifier = "terraform-db"

  engine         = "mysql"
  engine_version = "8.0"
  instance_class = "db.t3.micro"

  allocated_storage = 20

  db_name  = "sampledb"
  username = "admin"
  password = "password123" # ※後で変更推奨

  skip_final_snapshot = true

  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  db_subnet_group_name   = aws_db_subnet_group.main.name

  publicly_accessible = false

  tags = {
    Name = "terraform-rds"
  }
}
